@@ -51,15 +51,17 @@
 		<product-pack-folder>pack/program</product-pack-folder>
 
 		<!-- Runtime dependencies -->
-		<javafx.version>11-ea-18</javafx.version>
-		<slf4j.version>1.8.0-beta2</slf4j.version>
-		<miglayout.version>5.1</miglayout.version>
+		<!--java.version defined in parent pom -->
+		<javafx.version>11</javafx.version>
 		<controlsfx.version>9.0.0</controlsfx.version>
 		<undofx.version>2.1.0</undofx.version>
+		<slf4j.version>1.8.0-beta2</slf4j.version>
+		<miglayout.version>5.1</miglayout.version>
 
 		<!-- Test dependencies -->
-		<testfx.version>4.0.13-alpha</testfx.version>
-		<monocle.version>jdk-9+181</monocle.version>
+		<surefire.version>2.22.0</surefire.version>
+		<testfx.version>4.0.14-alpha</testfx.version>
+		<monocle.version>jdk-11+23</monocle.version>
 
 		<!-- Build dependencies -->
 		<izpack.version>5.1.3-SNAPSHOT</izpack.version>
@@ -79,26 +81,41 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Wait for Java 11 and OpenJFX to be more mature -->
-		<!--
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>11-ea+19</version>
+			<version>${javafx.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
-			<version>11-ea+19</version>
+			<version>${javafx.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-web</artifactId>
-			<version>11-ea+19</version>
+			<version>${javafx.version}</version>
 		</dependency>
-		-->
+
+		<!--<dependency>-->
+		<!--<groupId>org.controlsfx</groupId>-->
+		<!--<artifactId>controlsfx</artifactId>-->
+		<!--<version>${controlsfx.version}</version>-->
+		<!--</dependency>-->
+
+		<!--<dependency>-->
+		<!--<groupId>org.fxmisc.undo</groupId>-->
+		<!--<artifactId>undofx</artifactId>-->
+		<!--<version>${undofx.version}</version>-->
+		<!--</dependency>-->
+
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-javafx</artifactId>
+			<version>${miglayout.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -110,24 +127,6 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>${slf4j.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.miglayout</groupId>
-			<artifactId>miglayout-javafx</artifactId>
-			<version>${miglayout.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.controlsfx</groupId>
-			<artifactId>controlsfx</artifactId>
-			<version>${controlsfx.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.fxmisc.undo</groupId>
-			<artifactId>undofx</artifactId>
-			<version>${undofx.version}</version>
 		</dependency>
 
 		<dependency>
@@ -144,11 +143,38 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Apparently this causes duplicate modules to be loaded -->
 		<dependency>
 			<groupId>org.testfx</groupId>
 			<artifactId>openjfx-monocle</artifactId>
 			<version>${monocle.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-base</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-controls</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-graphics</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-swing</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-fxml</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-web</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
@@ -169,8 +195,9 @@
 				<!-- Works with Java 9.0.4 and Surefire 2.20.1 -->
 				<!-- Does not work with Java 10 and Surefire 2.21.0 -->
 				<!-- Does not work with Java 10 and Surefire 2.22.0 -->
-				<version>2.20.1</version>
+				<version>${surefire.version}</version>
 				<configuration>
+					<skip>true</skip>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<runOrder>alphabetical</runOrder>
@@ -222,23 +249,81 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<groupId>com.xeomar</groupId>
+				<artifactId>snare</artifactId>
+				<version>1.0-SNAPSHOT</version>
 				<executions>
 					<execution>
+						<id>patch-dependencies</id>
 						<phase>prepare-package</phase>
+						<goals>
+							<goal>patch</goal>
+						</goals>
+						<configuration>
+							<modulePath>${project.build.directory}/dependency</modulePath>
+							<jars>
+								<jar>
+									<name>commons-io.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-core.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-annotations.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-databind.jar</name>
+									<modules>
+										<module>com.fasterxml.jackson.core</module>
+										<module>com.fasterxml.jackson.annotation</module>
+									</modules>
+								</jar>
+								<jar>
+									<name>miglayout-core.jar</name>
+								</jar>
+								<jar>
+									<name>miglayout-javafx.jar</name>
+									<modules>
+										<module>miglayout.core</module>
+										<module>javafx.base</module>
+										<module>javafx.graphics</module>
+										<module>javafx.controls</module>
+									</modules>
+								</jar>
+							</jars>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.5.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
 						<configuration>
-							<executable>bash</executable>
+							<executable>${java.home}/bin/jlink</executable>
 							<arguments>
-								<argument>${project.basedir}/source/main/bin/module-patch.sh</argument>
-								<argument>${project.build.directory}/dependency/reactfx.jar</argument>
-								<argument>${project.build.directory}/dependency/undofx.jar</argument>
-								<argument>${project.build.directory}/dependency/jackson-annotations.jar</argument>
-								<argument>${project.build.directory}/dependency/jackson-databind.jar</argument>
+								<argument>--module-path</argument>
+								<argument>${jlink.module.path}</argument>
+								<argument>--add-modules</argument>
+								<argument>com.xeomar.xenon</argument>
+								<argument>--output</argument>
+								<argument>${basedir}/target/jlink</argument>
+								<argument>--launcher</argument>
+								<argument>xenon=com.xeomar.xenon/com.xeomar.xenon.Program</argument>
+
+								<argument>--strip-debug</argument>
+								<argument>--no-header-files</argument>
+								<argument>--no-man-pages</argument>
+								<!-- Valid value: 0, 1, 2 -->
+								<argument>--compress</argument>
+								<argument>2</argument>
 							</arguments>
 						</configuration>
 					</execution>
@@ -264,6 +349,7 @@
 			</plugin>
 			-->
 
+			<!-- FIXME Need new assemblies and installers -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
